# fcube

./: .gitignore  CMakeLists.txt  README.md
python/: extract_trigrams.py
shaders/: build_shaders.sh  frag.spv  shader.frag  shader.vert  vert.spv
src/: arg.hpp  main.cpp
src/tests/: arg_parser_tests.cpp  run_tests.sh
